Разметка страницы каталога

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             с клубничным джемом</h2>
           <p class="slider__text">Натуральное мороженое из свежих сливок
             и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи. </p>
-          <button class="button" type="button">Заказать</button>
+          <button class="button button--primary" type="button">Заказать</button>
         </div>
         <div class="slider__slideshow">
           <div class="slider__slide-container">
