--- a/catalog.html
+++ b/catalog.html
@@ -70,20 +70,23 @@
     <h1 class="main__title">Сливочное мороженое</h1>
     <section class="filter">
       <form class="filter__form" action="https://echo.htmlacademy.ru/" method="get">
-        <div class="filter__container">
+        <fieldset class="filter__group">
+          <legend class="visually-hidden">Сортировка</legend>
           <label class="filter__label" for="sorting">Сортировка:</label>
           <select class="filter__input" name="sorting" id="sorting">
             <option value="popular">по популярности</option>
             <option value="cheap">сначала дешевое</option>
             <option value="expensive">сначала дорогое</option>
           </select>
-        </div>
-        <div class="filter__container">
-          <label class="filter__label">Цена: <input class="filter__input--price" type="number" name="min-price" value="100"> ₽ –
-            <input class="filter__input--price" type="number" name="max-price" value="500"> ₽</label>
+        </fieldset>
+        <fieldset class="filter__group">
+          <legend class="visually-hidden">Цена</legend>
+          <label class="filter__label">Цена: <input class="filter__input filter__input--price" type="number" name="min-price" value="100"> ₽ </label><label class="filter__label">–
+            <input class="filter__input filter__input--price" type="number" name="max-price" value="500"> ₽</label>
           <div class="filter__range range">
             <div class="range-scale">
-              <div class="range-bar" style="left: 31px; width: 56px;">
+              <div class="range-bar" style="left: 31px;
+              width: 56px;">
                 <button class="range-toggle toggle-min" type="button">
                   <span class="visually-hidden">Изменить минимальную цену.</span>
                 </button>
@@ -93,9 +96,9 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="filter__container">
-          <h2 class="filter__label">Жирность:</h2>
+        </fieldset>
+        <fieldset class="filter__group">
+          <legend class="filter__label">Жирность:</legend>
           <ul class="filter__list">
             <li class="filter__item">
               <label class="filter__control control">
@@ -106,7 +109,7 @@
             </li>
             <li class="filter__item">
               <label class="filter__control control">
-                <input type="radio" class="visually-hidden control__input" name="fatness" value="under 10">
+                <input type="radio" class="visually-hidden control__input" name="fatness" value="under 10" checked>
                 <span class="control__mark"></span>
                 <span class="control__label">до 10%</span>
               </label>
@@ -126,8 +129,206 @@
               </label>
             </li>
           </ul>
-        </div>
+        </fieldset>
+        <fieldset class="filter__group">
+          <legend class="filter__label">Наполнители:</legend>
+            <ul class="filter__list">
+              <li class="filter__item">
+                <label class="filter__control control">
+                  <input type="checkbox" class="visually-hidden control__input" name="chocolate" checked>
+                  <span class="control__mark"></span>
+                  <span class="control__label">шоколадные</span>
+                </label>
+              </li>
+              <li class="filter__item">
+                <label class="filter__control control">
+                  <input type="checkbox" class="visually-hidden control__input" name="sugar-toppings" checked>
+                  <span class="control__mark"></span>
+                  <span class="control__label">сахарные посыпки</span>
+                </label>
+              </li>
+              <li class="filter__item">
+                <label class="filter__control control">
+                  <input type="checkbox" class="visually-hidden control__input" name="fruit">
+                  <span class="control__mark"></span>
+                  <span class="control__label">фрукты</span>
+                </label>
+              </li>
+              <li class="filter__item">
+                <label class="filter__control control">
+                  <input type="checkbox" class="visually-hidden control__input" name="syrups">
+                  <span class="control__mark"></span>
+                  <span class="control__label">сиропы</span>
+                </label>
+              </li>
+              <li class="filter__item">
+                <label class="filter__control control">
+                  <input type="checkbox" class="visually-hidden control__input" name="jams">
+                  <span class="control__mark"></span>
+                  <span class="control__label">джемы</span>
+                </label>
+              </li>
+            </ul>
+        </fieldset>
+        <button class="button button__light" type="submit">Применить</button>
       </form>
+    </section>
+    <section class="goods">
+      <h2 class="visually-hidden">Попробуйте вкусы нашего мороженого</h2>
+      <ul class="goods__list">
+        <li class="goods__item">
+          <img src="img/goods-raspberry-ice-cream.svg" alt="Сливочное мороженое с малиновым джемом" width="168" height="168">
+          <h3 class="goods__item-title">Малинка</h3>
+          <p class="goods__item-description">Сливочное мороженое с малиновым джемом</p>
+          <span class="goods__item-price">310 ₽/кг</span>
+          <button type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
+            <span class="visually-hidden">Добавить в корзину</span>
+          </button>
+        </li>
+        <li class="goods__item">
+          <img src="img/goods-pistachio-ice-cream.png" alt="Фисташковый пломбир с кусочками шоколада" width="168" height="168">
+          <h3 class="goods__item-title">Фисташка</h3>
+          <p class="goods__item-description">Фисташковый пломбир с кусочками шоколада</p>
+          <span class="goods__item-price">340 ₽/кг</span>
+          <button type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
+            <span class="visually-hidden">Добавить в корзину</span>
+          </button>
+        </li>
+        <li class="goods__item">
+          <img src="img/goods-blueberry-ice-cream.png" alt="Крем-брюле
+          с черничным джемом" width="168" height="168">
+          <h3 class="goods__item-title">Черника</h3>
+          <p class="goods__item-description">Крем-брюле
+            с черничным джемом</p>
+          <span class="goods__item-price">330 ₽/кг</span>
+          <button type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
+            <span class="visually-hidden">Добавить в корзину</span>
+          </button>
+        </li>
+        <li class="goods__item">
+          <img src="img/goods-bubble-gum-ice-cream.png" alt="Ванильный пломбир
+          со сладкой посыпкой" width="168" height="168">
+          <h3 class="goods__item-title">Бабл-гам</h3>
+          <p class="goods__item-description">Ванильный пломбир
+            со сладкой посыпкой</p>
+          <span class="goods__item-price">320 ₽/кг</span>
+          <button type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
+            <span class="visually-hidden">Добавить в корзину</span>
+          </button>
+        </li>
+        <li class="goods__item">
+          <img src="img/goods-blackberry-ice-cream.png" alt="Сливочное мороженое с ежевичным джемом" width="168" height="168">
+          <h3 class="goods__item-title">Ежевика</h3>
+          <p class="goods__item-description">Сливочное мороженое с ежевичным джемом</p>
+          <span class="goods__item-price">330 ₽/кг</span>
+          <button type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
+            <span class="visually-hidden">Добавить в корзину</span>
+          </button>
+        </li>
+        <li class="goods__item">
+          <img src="img/goods-banana-ice-cream.png" alt="Сливочный пломбир с банановым вкусом" width="168" height="168">
+          <h3 class="goods__item-title">Банан</h3>
+          <p class="goods__item-description">Сливочный пломбир с банановым вкусом</p>
+          <span class="goods__item-price">340 ₽/кг</span>
+          <button type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
+            <span class="visually-hidden">Добавить в корзину</span>
+          </button>
+        </li>
+        <li class="goods__item">
+          <img src="img/goods-chocolate-ice-cream.png" alt="Классический шоколадный пломбир" width="168" height="168">
+          <h3 class="goods__item-title">Шоколадка</h3>
+          <p class="goods__item-description">Классический шоколадный пломбир</p>
+          <span class="goods__item-price">270 ₽/кг</span>
+          <button type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
+            <span class="visually-hidden">Добавить в корзину</span>
+          </button>
+        </li>
+        <li class="goods__item">
+          <img src="img/goods-strawberry-ice-cream.png" alt="Сливочный пломбир с клубничным вкусом" width="168" height="168">
+          <h3 class="goods__item-title">Клубничка</h3>
+          <p class="goods__item-description">Сливочный пломбир с клубничным вкусом</p>
+          <span class="goods__item-price">300 ₽/кг</span>
+          <button type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
+            <span class="visually-hidden">Добавить в корзину</span>
+          </button>
+        </li>
+        <li class="goods__item">
+          <img src="img/goods-lemon-ice-cream.png" alt="Освежающий лимонный сорбет" width="168" height="168">
+          <h3 class="goods__item-title">Лимон</h3>
+          <p class="goods__item-description">Освежающий лимонный сорбет</p>
+          <span class="goods__item-price">310 ₽/кг</span>
+          <button type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
+            <span class="visually-hidden">Добавить в корзину</span>
+          </button>
+        </li>
+        <li class="goods__item">
+          <img src="img/goods-menthol-ice-cream.png" alt="Сливочный пломбир с ментоловым сиропом" width="168" height="168">
+          <h3 class="goods__item-title">Ментол</h3>
+          <p class="goods__item-description">Сливочный пломбир с ментоловым сиропом</p>
+          <span class="goods__item-price">320 ₽/кг</span>
+          <button type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
+            <span class="visually-hidden">Добавить в корзину</span>
+          </button>
+        </li>
+        <li class="goods__item">
+          <img src="img/goods-nut-ice-cream.png" alt="Фисташковый пломбир с шоколадным сиропом" width="168" height="168">
+          <h3 class="goods__item-title">Орешек</h3>
+          <p class="goods__item-description">Фисташковый пломбир с шоколадным сиропом</p>
+          <span class="goods__item-price">360 ₽/кг</span>
+          <button type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
+            <span class="visually-hidden">Добавить в корзину</span>
+          </button>
+        </li>
+        <li class="goods__item">
+          <img src="img/goods-creme-caramel-ice-cream.png" alt="Классическое крем-брюле" width="168" height="168">
+          <h3 class="goods__item-title">Крем-брюле</h3>
+          <p class="goods__item-description">Классическое крем-брюле</p>
+          <span class="goods__item-price">280 ₽/кг</span>
+          <button type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.17 1.25a.67.67 0 0 0 0 1.33h1.77l.47 2.34v.05l.97 4.84a1.83 1.83 0 0 0 1.82 1.46h5.62a1.83 1.83 0 0 0 1.82-1.46V9.8l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14 1.8a.67.67 0 0 0-.66-.54H1.17Zm4.52 8.3-.81-4.07h8.23l-.78 4.07a.5.5 0 0 1-.49.4H6.18a.5.5 0 0 1-.49-.4ZM4.56 13.5a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#FCFCFC"/></svg>
+            <span class="visually-hidden">Добавить в корзину</span>
+          </button>
+        </li>
+      </ul>
+      <button class="button button--primary" type="button">Показать еще</button>
+      <div class="pagination">
+        <button class="pagination__button-arrow" type="button">
+          <svg xmlns="http://www.w3.org/2000/svg" width="17" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M9.71 13.14a.67.67 0 0 0 .94-.95L6.45 8l4.2-4.2a.66.66 0 0 0-.94-.94L5.04 7.52a.66.66 0 0 0 0 .94l4.67 4.68Z" fill="#FCFCFC"/></svg>
+          <span class="visually-hidden">Показать предыдущую страницу</span>
+        </button>
+        <ol class="pagination__list">
+          <li class="pagination__item">
+            <button class="pagination__button" type="button">1</button>
+          </li>
+          <li class="pagination__item">
+            <button class="pagination__button" type="button">2</button>
+          </li>
+          <li class="pagination__item">
+            <button class="pagination__button" type="button">3</button>
+          </li>
+          <li class="pagination__item">
+            <button class="pagination__button" type="button">4</button>
+          </li>
+          <li class="pagination__item">
+            <button class="pagination__button" type="button">5</button>
+          </li>
+        </ol>
+        <button class="pagination__button-arrow" type="button">
+          <svg xmlns="http://www.w3.org/2000/svg" width="17" height="16" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M7.29 2.86a.66.66 0 1 0-.94.95l4.2 4.2-4.2 4.2a.67.67 0 0 0 .94.94l4.67-4.67a.66.66 0 0 0 0-.94L7.3 2.86Z" fill="#FCFCFC"/></svg>
+          <span class="visually-hidden">Показать следующую страницу</span>
+        </button>
+      </div>
     </section>
   </main>
   <footer class="footer">
