--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
               </button>
             </li>
           </ol>
-          <ul class="slider__social-list social">
-            <li class="slider__social-item">
+          <ul class="slider__social-list social-list">
+            <li class="slider__social-item social-item">
               <a href="#" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M26 14a12 12 0 1 1-24 0 12 12 0 0 1 24 0Zm-11.57-3.14c-1.17.48-3.5 1.49-7 3.01-.57.23-.86.45-.9.67-.04.36.42.5 1.04.7l.27.08c.6.2 1.43.44 1.86.45.39 0 .82-.16 1.3-.48 3.27-2.21 4.96-3.33 5.06-3.35.08-.02.18-.04.25.02.07.07.07.18.06.22-.05.19-1.84 1.86-2.77 2.72a28.24 28.24 0 0 0-.82.79c-.57.54-1 .96.02 1.63.5.32.89.59 1.28.85a88.77 88.77 0 0 0 1.8 1.23c.5.35.95.67 1.5.62.32-.03.66-.33.82-1.23.4-2.13 1.18-6.73 1.36-8.63.01-.16 0-.31-.02-.47a.5.5 0 0 0-.17-.33.78.78 0 0 0-.46-.14c-.46.01-1.15.25-4.48 1.64Z" fill="#FCFCFC"/><rect x="1" y="1" width="26" height="26" rx="13" stroke="#FCFCFC" stroke-opacity=".3" stroke-width="2"/></svg>
                 <span class="visually-hidden">Телеграм</span>
@@ -234,83 +234,96 @@
             <h2 class="delivery__title">Доставка любимого мороженого на дом</h2>
             <p class="delivery__description">Хочется полакомиться любимым десертом, <br> но нет времени съездить в магазин? Закажите доставку мороженого на дом, и курьер привезёт вам ваш заказ в течение часа!</p>
           </div>
-          <form class="delivery__form" action="https://echo.htmlacademy.ru/" method="post">
+          <form class="delivery__form form" action="https://echo.htmlacademy.ru/" method="post">
             <p class="delivery__text">Укажите адрес и дату доставки, и мы свяжемся <br> с вами, чтобы подтвердить заказ.</p>
-            <div class="delivery__inputs-group">
-              <label class="delivery__label delivery__label--date">Дата
+            <div class="delivery__inputs-container">
+              <div class="delivery__input-group">
+                <label class="delivery__label" for="date">Дата</label>
                 <span>
-                  <button class="button--tooltip" type="button">
+                  <button class=" button button--tooltip" type="button">
                     <img src="img/tooltip-icon.svg" alt="Кнопка дополнительной информации">
                   </button>
                   <span class="visually-hidden">Дополнительная информация</span>
                 </span>
                 <input class="form__input delivery__input delivery__input--date" type="text" name="date" id="date" placeholder="01.04.2020">
-              </label>
-              <label class="delivery__label delivery__label--phone">Телефон
+              </div>
+              <div class="delivery__input-group">
+                <label class="delivery__label" for="phone">Телефон</label>
                 <input class="form__input delivery__input delivery__input--phone" type="tel" name="phone" id="phone" placeholder="+7 800 999-00-00">
-              </label>
-              <label class="delivery__label delivery__label--address">Адрес
+              </div>
+              <div class="delivery__input-group">
+                <label class="delivery__label" for="address">Адрес</label>
                 <span>
-                  <button class="button--tooltip" type="button">
+                  <button class="button button--tooltip" type="button">
                     <img src="img/tooltip-icon.svg" alt="Кнопка дополнительной информации">
                   </button>
                   <span class="visually-hidden">Дополнительная информация</span>
                 </span>
                 <input class="form__input delivery__input delivery__input--address" type="text" name="address" id="address" placeholder="ул. Большая Конюшенная, 19/8">
-              </label>
+              </div>
             </div>
             <button class="button button--extra delivery__button" type="submit">Отправить</button>
           </form>
         </section>
         <section class="contacts">
           <h2 class="visually-hidden">Наши контакты</h2>
-          <p class="contacts__text">Адрес главного офиса и офлайн-магазина:</p>
-          <p class="contacts__address">наб. реки Карповки, 5 лит П, Санкт-Петербург</p>
-          <p class="contacts__text">Для заказов по телефону:</p>
-          <a href="tel:+78128121212" class="contacts__phone">+7 (812) 812-12-12</a>
-          <p class="contacts__extra-info">(с 10 до 20 ежедневно)</p>
-          <a href="#" class="button button--extra">Форма обратной связи</a>
+          <div class="contacts__content">
+            <p class="contacts__text">Адрес главного офиса <br> и офлайн-магазина:</p>
+            <p class="contacts__address">наб. реки Карповки, <br> 5 лит П, Санкт-Петербург</p>
+            <p class="contacts__text">Для заказов по телефону:</p>
+            <a href="tel:+78128121212" class="contacts__phone">+7 (812) 812-12-12</a>
+            <p class="contacts__extra-info">(с 10 до 20 ежедневно)</p>
+            <a href="#" class="button button--extra button--link">Форма обратной связи</a>
+          </div>
         </section>
       </div>
     </main>
     <footer class="footer">
-      <div class="footer__social social">
-        <a href="https://t.me/htmlacademy" target="_blank">
-          <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M26 14a12 12 0 1 1-24 0 12 12 0 0 1 24 0Zm-11.57-3.14c-1.17.48-3.5 1.49-7 3.01-.57.23-.86.45-.9.67-.04.36.42.5 1.04.7l.27.08c.6.2 1.43.44 1.86.45.39 0 .82-.16 1.3-.48 3.27-2.21 4.96-3.33 5.06-3.35.08-.02.18-.04.25.02.07.07.07.18.06.22-.05.19-1.84 1.86-2.77 2.72a28.24 28.24 0 0 0-.82.79c-.57.54-1 .96.02 1.63.5.32.89.59 1.28.85a88.77 88.77 0 0 0 1.8 1.23c.5.35.95.67 1.5.62.32-.03.66-.33.82-1.23.4-2.13 1.18-6.73 1.36-8.63.01-.16 0-.31-.02-.47a.5.5 0 0 0-.17-.33.78.78 0 0 0-.46-.14c-.46.01-1.15.25-4.48 1.64Z" fill="#FCFCFC"/><rect x="1" y="1" width="26" height="26" rx="13" stroke="#FCFCFC" stroke-opacity=".3" stroke-width="2"/></svg>
-          <span class="visually-hidden">Телеграм</span>
-        </a>
-        <a href="https://vk.com/htmlacademy" target="_blank">
-          <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M26 14a12 12 0 1 1-24 0 12 12 0 0 1 24 0Zm-11.41 2.97h-.72s-1.58.09-2.98-1.18c-1.52-1.39-2.86-4.14-2.86-4.14s-.07-.18 0-.27c.1-.1.36-.1.36-.1l1.72-.01s.16.02.27.1c.1.05.15.17.15.17s.28.61.65 1.17c.71 1.08 1.05 1.32 1.29 1.2.35-.16.25-1.53.25-1.53s0-.5-.18-.71c-.14-.17-.41-.22-.53-.24-.1-.01.06-.2.26-.3.31-.13.86-.13 1.5-.13.5 0 .65.03.84.07.46.1.44.41.41 1.08l-.02.7v.18c-.01.34-.02.73.23.88.13.07.45 0 1.26-1.19.38-.56.66-1.23.66-1.23s.07-.12.16-.17c.1-.05.24-.04.24-.04h1.8s.54-.06.63.15c.1.23-.2.75-.94 1.61-.7.82-1.03 1.12-1 1.38.01.2.23.38.66.72.89.73 1.13 1.1 1.18 1.2l.01.01c.4.58-.44.62-.44.62l-1.6.02s-.34.06-.8-.2a3.94 3.94 0 0 1-.69-.6c-.33-.34-.65-.66-.91-.58-.45.12-.44.96-.44.96s0 .18-.1.28c-.1.1-.32.12-.32.12Z" fill="#FCFCFC"/><rect x="1" y="1" width="26" height="26" rx="13" stroke="#FCFCFC" stroke-opacity=".3" stroke-width="2"/></svg>
-          <span class="visually-hidden">ВКонтакте</span>
-        </a>
-        <a href="https://www.youtube.com/user/htmlacademyru" target="_blank">
-          <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"><path d="m16 13.8-2.8-1.32c-.25-.11-.45.01-.45.29v2.46c0 .28.2.4.45.29L16 14.2c.25-.12.25-.3 0-.42ZM14 2a12 12 0 1 0 0 24 12 12 0 0 0 0-24Zm0 16.88c-6.14 0-6.25-.56-6.25-4.88s.1-4.88 6.25-4.88c6.14 0 6.25.56 6.25 4.88s-.1 4.88-6.25 4.88Z" fill="#FCFCFC"/><rect x="1" y="1" width="26" height="26" rx="13" stroke="#FCFCFC" stroke-opacity=".3" stroke-width="2"/></svg>
-          <span class="visually-hidden">Ютьюб</span>
-        </a>
-      </div>
-      <nav class="footer__navigation">
-        <ul class="footer__list">
-          <li class="footer__item">
-            <a href="#" class="footer__link footer__link--current">Для поставщиков</a>
+      <div class="footer__wrapper">
+        <ul class="footer__social-list social-list">
+          <li class="footer__social-item social-item">
+            <a href="https://t.me/htmlacademy" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M26 14a12 12 0 1 1-24 0 12 12 0 0 1 24 0Zm-11.57-3.14c-1.17.48-3.5 1.49-7 3.01-.57.23-.86.45-.9.67-.04.36.42.5 1.04.7l.27.08c.6.2 1.43.44 1.86.45.39 0 .82-.16 1.3-.48 3.27-2.21 4.96-3.33 5.06-3.35.08-.02.18-.04.25.02.07.07.07.18.06.22-.05.19-1.84 1.86-2.77 2.72a28.24 28.24 0 0 0-.82.79c-.57.54-1 .96.02 1.63.5.32.89.59 1.28.85a88.77 88.77 0 0 0 1.8 1.23c.5.35.95.67 1.5.62.32-.03.66-.33.82-1.23.4-2.13 1.18-6.73 1.36-8.63.01-.16 0-.31-.02-.47a.5.5 0 0 0-.17-.33.78.78 0 0 0-.46-.14c-.46.01-1.15.25-4.48 1.64Z" fill="#FCFCFC"/><rect x="1" y="1" width="26" height="26" rx="13" stroke="#FCFCFC" stroke-opacity=".3" stroke-width="2"/></svg>
+              <span class="visually-hidden">Телеграм</span>
+            </a>
           </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">Наши документы</a>
+          <li class="footer__social-item">
+            <a href="https://vk.com/htmlacademy" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M26 14a12 12 0 1 1-24 0 12 12 0 0 1 24 0Zm-11.41 2.97h-.72s-1.58.09-2.98-1.18c-1.52-1.39-2.86-4.14-2.86-4.14s-.07-.18 0-.27c.1-.1.36-.1.36-.1l1.72-.01s.16.02.27.1c.1.05.15.17.15.17s.28.61.65 1.17c.71 1.08 1.05 1.32 1.29 1.2.35-.16.25-1.53.25-1.53s0-.5-.18-.71c-.14-.17-.41-.22-.53-.24-.1-.01.06-.2.26-.3.31-.13.86-.13 1.5-.13.5 0 .65.03.84.07.46.1.44.41.41 1.08l-.02.7v.18c-.01.34-.02.73.23.88.13.07.45 0 1.26-1.19.38-.56.66-1.23.66-1.23s.07-.12.16-.17c.1-.05.24-.04.24-.04h1.8s.54-.06.63.15c.1.23-.2.75-.94 1.61-.7.82-1.03 1.12-1 1.38.01.2.23.38.66.72.89.73 1.13 1.1 1.18 1.2l.01.01c.4.58-.44.62-.44.62l-1.6.02s-.34.06-.8-.2a3.94 3.94 0 0 1-.69-.6c-.33-.34-.65-.66-.91-.58-.45.12-.44.96-.44.96s0 .18-.1.28c-.1.1-.32.12-.32.12Z" fill="#FCFCFC"/><rect x="1" y="1" width="26" height="26" rx="13" stroke="#FCFCFC" stroke-opacity=".3" stroke-width="2"/></svg>
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
           </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">О производстве</a>
-          </li>
-          <li class="footer__item">
-            <a href="#" class="footer__link">Экологические стандарты</a>
+          <li class="footer__social-item">
+            <a href="https://www.youtube.com/user/htmlacademyru" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"><path d="m16 13.8-2.8-1.32c-.25-.11-.45.01-.45.29v2.46c0 .28.2.4.45.29L16 14.2c.25-.12.25-.3 0-.42ZM14 2a12 12 0 1 0 0 24 12 12 0 0 0 0-24Zm0 16.88c-6.14 0-6.25-.56-6.25-4.88s.1-4.88 6.25-4.88c6.14 0 6.25.56 6.25 4.88s-.1 4.88-6.25 4.88Z" fill="#FCFCFC"/><rect x="1" y="1" width="26" height="26" rx="13" stroke="#FCFCFC" stroke-opacity=".3" stroke-width="2"/></svg>
+              <span class="visually-hidden">Ютьюб</span>
+            </a>
           </li>
         </ul>
-      </nav>
-      <div class="footer__credits credits">
-        <a href="https://htmlacademy.ru/" target="_blank" class="footer__html-academy-logo">
-          <img src="img/logo-htmlacademy.svg" alt="Логотип HTML-академии" width="93" height="26">
-        </a>
-        <p class="credits__description">Сделано в
-          <a href="https://htmlacademy.ru/" target="_blank">.html academy</a>
-          &copy; 2021</p>
+        <nav class="footer__navigation">
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link footer__link--current">Для поставщиков</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Наши документы</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">О производстве</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Экологические стандарты</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="footer__credits credits">
+          <a href="https://htmlacademy.ru/" target="_blank" class="footer__html-academy-logo">
+            <img src="img/logo-htmlacademy.svg" alt="Логотип HTML-академии" width="93" height="26">
+          </a>
+          <p class="credits__description">Сделано в
+            <a href="https://htmlacademy.ru/" target="_blank">.html academy</a>
+            &copy; 2021</p>
+        </div>
       </div>
     </footer>
   </body>
